test/error/25.c
static int func(){
    int a;
}